funcionalidad de traer usuarios de backoffice y claro networks hecha

--- a/resources/sass/atoms/_spacings.scss
+++ b/resources/sass/atoms/_spacings.scss
@@ -1,343 +1,343 @@
 .cuadro-dia {
-  width: 100%;
-  height: 50px;
-  margin: none;
-  margin-top: -19px;
+    width: 100%;
+    height: 50px;
+    margin: none;
+    margin-top: -19px;
 }
 
 .cuadro-fecha {
-  height: 54px;
-  margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: -8px;
+    height: 54px;
+    margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: -8px;
 }
 
 .centrados {
-  padding-left: 69px;
-  margin-top: 33px;
+    padding-left: 69px;
+    margin-top: 33px;
 }
 
 .posi {
-  background: $morelightblue;
-  width: 32px;
-  height: 33px;
-  position: relative;
+    background: $morelightblue;
+    width: 32px;
+    height: 33px;
+    position: relative;
 }
 .describe {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-transform: translateX(100%);
-  transform: translateX(26%);
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transform: translateX(100%);
+    transform: translateX(26%);
 }
 
 .section-pais {
-  margin-top: -6px;
-  margin-left: -29px;
+    margin-top: -6px;
+    margin-left: -29px;
 }
 .margin-t-pais {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 .margin-fecha1 {
-  margin-left: 54px;
+    margin-left: 54px;
 }
 .padding-pais {
-  padding-top: 7px;
+    padding-top: 7px;
 }
 .padding-fecha {
-  padding-top: 7px;
-  padding-left: 13px;
+    padding-top: 7px;
+    padding-left: 13px;
 }
 .margin-pais {
-  margin-left: -14px;
+    margin-left: -14px;
 }
 
 .margin-fecha {
-  margin-bottom: 3px;
+    margin-bottom: 3px;
 }
 
 .position-zona {
-  margin-bottom: 35px;
-  transform: translateY(-55px);
+    margin-bottom: 35px;
+    transform: translateY(-55px);
 }
 .position-nav {
-  margin: auto;
-  margin-bottom: -15px;
-  transform: translateY(-55px);
+    margin: auto;
+    margin-bottom: -15px;
+    transform: translateY(-55px);
 }
 .position-title {
-  margin-bottom: 51px;
-  margin-top: -31px;
+    margin-bottom: 51px;
+    margin-top: -31px;
 }
 
 .ml3 {
-  margin-left: -3%;
+    margin-left: -3%;
 }
 .ali {
-  margin-top: -2%;
+    margin-top: -2%;
 }
 .ali1 {
-  margin-top: 8%;
+    margin-top: 8%;
 }
 .Icon_paises1 {
-  vertical-align: middle;
-  margin-right: 10px;
+    vertical-align: middle;
+    margin-right: 10px;
 }
 .ma-le {
-  left: 12%;
+    left: 12%;
 }
 
 .ml-btn {
-  margin-left: 66%;
+    margin-left: 66%;
 }
 
 .m-slider {
-  margin-left: 50px;
+    margin-left: 50px;
 }
 
 .pd-5 {
-  padding-left: 5%;
+    padding-left: 5%;
 }
 .pd-10 {
-  padding-left: 10%;
+    padding-left: 10%;
 }
 
 .left .right {
-  position: absolute;
+    position: absolute;
 }
 .fecha-margi {
-  //margin-left: 35px;
-  margin-bottom: -14px;
+    //margin-left: 35px;
+    margin-bottom: -14px;
 }
 
 .signup-button-container {
-  padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 .ubicacion5 {
-  position: absolute;
-  top: 90%;
-  -webkit-transform: translate(0, -100%);
-  transform: translate(0, -100%);
-  left: 0;
+    position: absolute;
+    top: 90%;
+    -webkit-transform: translate(0, -100%);
+    transform: translate(0, -100%);
+    left: 0;
 }
 .form-image-blue {
-  border-radius: 15px;
-  left: 0;
-  top: 0;
+    border-radius: 15px;
+    left: 0;
+    top: 0;
 }
 .ubicacion1 {
-  position: absolute;
-  left: 41%;
-  top: 36%;
+    position: absolute;
+    left: 41%;
+    top: 36%;
 }
 .ubicacion3 {
-  position: absolute;
-  top: 30%;
-  z-index: 1;
+    position: absolute;
+    top: 30%;
+    z-index: 1;
 }
 .ubicacion3-1 {
-  position: absolute;
-  right: 3%;
-  top: 36%;
-  z-index: 1;
+    position: absolute;
+    right: 3%;
+    top: 36%;
+    z-index: 1;
 }
 
 .section-sexo {
-  margin-left: -21px;
+    margin-left: -21px;
 }
 
 .ma-no {
-  margin-right: 0px !important;
-  margin-left: 0px !important;
+    margin-right: 0px !important;
+    margin-left: 0px !important;
 }
 
 .margin-top-por {
-  margin-top: 4%;
-  margin-bottom: 2%;
+    margin-top: 4%;
+    margin-bottom: 2%;
 }
 .centro {
-  text-align: center;
+    text-align: center;
 }
 
 .histori {
-  display: none;
-  position: absolute;
-  left: 27px;
-  top: -210px;
+    display: none;
+    position: absolute;
+    left: 27px;
+    top: -210px;
 }
 
 .edit {
-  display: none;
-  position: absolute;
-  left: 27px;
-  top: -177px;
+    display: none;
+    position: absolute;
+    left: 27px;
+    top: -177px;
 }
 
 .noti {
-  display: none;
-  position: absolute;
-  left: 27px;
-  top: -144px;
+    display: none;
+    position: absolute;
+    left: 27px;
+    top: -144px;
 }
 
 .veri {
-  /*display: none;
+    /*display: none;
     position: absolute;
     top: -172px;*/
-  display: none;
-  position: absolute;
-  left: 30px;
-  top: -172px;
+    display: none;
+    position: absolute;
+    left: 30px;
+    top: -172px;
 }
 .veri1 {
-  display: none;
-  position: absolute;
-  left: 30px;
-  top: -143px;
+    display: none;
+    position: absolute;
+    left: 30px;
+    top: -143px;
 }
 
 .edita {
-  /*display: none;
+    /*display: none;
     position: absolute;
     top: 32px;*/
-  display: none;
-  position: absolute;
-  left: 30px;
-  top: -137px;
+    display: none;
+    position: absolute;
+    left: 30px;
+    top: -137px;
 }
 .edita1 {
-  display: none;
-  position: absolute;
-  left: 30px;
-  top: -109px;
+    display: none;
+    position: absolute;
+    left: 30px;
+    top: -109px;
 }
 
 .borra {
-  /*display: none;
+    /*display: none;
     position: absolute;
     top: 66px;*/
-  display: none;
-  position: absolute;
-  left: 30px;
-  top: -106px;
+    display: none;
+    position: absolute;
+    left: 30px;
+    top: -106px;
 }
 .borra1 {
-  display: none;
-  position: absolute;
-  left: 30px;
-  top: -77px;
+    display: none;
+    position: absolute;
+    left: 30px;
+    top: -77px;
 }
 
 .position-btn-alta {
-  margin: auto;
-  width: 100%;
-  max-width: 683px;
+    margin: auto;
+    width: 100%;
+    max-width: 683px !important;
 }
+
 .trans10 {
-  transform: translateX(10px);
+    transform: translateX(10px);
 }
 .position-btn-regis {
-  margin: auto;
-  width: 100%;
-  max-width: 1004px;
+    margin: auto;
+    width: 100%;
+    max-width: 1004px;
 }
 .alineacion {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  position: relative;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 .centrar {
-  left: 15px;
+    left: 15px;
 }
 
 .space {
-  margin-bottom: 45px;
+    margin-bottom: 45px;
 }
 .margin-front {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 .margin-sex1 {
-  margin-left: -8px;
+    margin-left: -8px;
 }
 
 .pad-bott {
-  padding-bottom: 40px;
+    padding-bottom: 40px;
 }
 
 .mt-xl-6 {
-  margin-top: 96px;
+    margin-top: 96px;
 }
 .mb-xl-6 {
-  margin-bottom: 96px;
+    margin-bottom: 96px;
 }
 .mr-xl-6 {
-  margin-right: 96px;
+    margin-right: 96px;
 }
 .ml-xl-6 {
-  margin-left: 96px;
+    margin-left: 96px;
 }
 .pt-xl-6 {
-  padding-top: 96px;
+    padding-top: 96px;
 }
 .pr-xl-6 {
-  padding-right: 96px;
+    padding-right: 96px;
 }
 .pl-xl-6 {
-  padding-left: 96px;
+    padding-left: 96px;
 }
 .pb-xl-6 {
-  padding-bottom: 96px;
+    padding-bottom: 96px;
 }
 .mb5 {
-  margin-bottom: 5%;
+    margin-bottom: 5%;
 }
 .p1 {
-  position: absolute;
-  margin-top: 8%;
+    position: absolute;
+    margin-top: 8%;
 }
 .posilan {
-  margin-bottom: -14%;
-  margin-top: 12%;
-  margin-left: 16%;
+    margin-bottom: -14%;
+    margin-top: 12%;
+    margin-left: 16%;
 }
 .posi1 {
-  margin-bottom: -14%;
-  margin-left: 3%;
+    margin-bottom: -14%;
+    margin-left: 3%;
 }
 .prev {
-  margin-left: -133px;
-  margin-top: -40px;
+    margin-left: -133px;
+    margin-top: -40px;
 }
 
 .mt12 {
-  margin-top: 12%;
+    margin-top: 12%;
 }
-
 
 .ml-12 {
-  margin-left: 12%;
+    margin-left: 12%;
 }
-.mtop-8{
-  margin-top: -8%;
+.mtop-8 {
+    margin-top: -8%;
 }
-.ml20{
-  margin-left: -20%;
+.ml20 {
+    margin-left: -20%;
 }
-.mg6{
-  margin-left: 6%;
+.mg6 {
+    margin-left: 6%;
 }
-.mb12{
-margin-bottom: 10%;
+.mb12 {
+    margin-bottom: 10%;
 }
-.pt7{
-  padding-top: 7%;
+.pt7 {
+    padding-top: 7%;
 }
-.location{
-  margin-left: -150%;
-  margin-bottom: -28%;
+.location {
+    margin-left: -150%;
+    margin-bottom: -28%;
 }
