container de historial, faltan arreglos

--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -20,6 +20,14 @@
   line-height: 4;
   //a-text-public
 }
+.contenedor-table {
+  display: table;
+  overflow-x: scroll;
+  height: 63px;
+  white-space: nowrap;
+  line-height: 4;
+  //a-text-public
+}
 
 .contenedor {
   display: table;
