--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -126,6 +126,48 @@
   border: 1px solid $waterblue;
   //.a-text-landing
 }
+.btn-apro {
+  width: 181px;
+  height: 46px;
+  border-radius: 7px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: $green;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  margin: auto;
+  padding-top: 1px;
+  border: 1px solid $green;
+
+  //.a-text-grilla
+}
+.btn-recha {
+  width: 181px;
+  height: 46px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  border-radius: 7px;
+  background-color: $selecred;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  margin: auto;
+  border: 1px solid $selecred;
+  //.a-text-landing
+}
 .btn-public-inac {
   width: 274px;
   height: 48px;
