cambios hasta la parte del menu, falta grilla

--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -3,6 +3,39 @@
 @import "../base/color";
 
 /* BOTONES REUTILIZABLES */
+.a-btn-basic-medium{
+  width: 224px;
+  height: 54px;
+  border-radius: 20px;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  transition: all 0.3s;
+}
+.a-btn-basic-large{
+  width: 294px;
+  height: 54px;
+  border-radius: 20px;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  transition: all 0.3s;
+}
+.a-btn-basic-small{
+  width: 181px;
+  height: 54px;
+  border-radius: 20px;
+  outline: none !important;
+  outline-width: 0 !important;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  transition: all 0.3s;
+}
 
 .a-button-pill-teal-outline {
     border: 2px solid $teal;
@@ -71,32 +104,16 @@
     border-radius: 25px;
 }
 .btn-return-sitio {
-    width: 294px;
-    height: 49px;
-    border-radius: 13px;
     border: solid 1px $morelightgray;
     background-color: $dark;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
 
     //a-text-return
 }
 .btn-grilla {
-    width: 181px;
-    height: 46px;
-    border-radius: 7px;
     align-items: center;
     display: flex;
     justify-content: center;
     background-color: $teal;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
@@ -107,18 +124,10 @@
     //.a-text-grilla
 }
 .btn-landing {
-    width: 181px;
-    height: 46px;
     align-items: center;
     display: flex;
     justify-content: center;
-    border-radius: 7px;
     background-color: $white;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
@@ -185,15 +194,7 @@
     border: 1px solid $gray;
 }
 .btn-cargar {
-    width: 182px;
-    height: 46px;
-    border-radius: 7px;
     background-color: $orange;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
@@ -201,13 +202,7 @@
     border: 1px solid $orange;
     //a-text-grilla
 }
-.btn-crear {
-    width: 277px;
-    height: 47px;
-    border-radius: 14px;
-    background-color: $teal;
-    cursor: pointer;
-}
+
 .btn-ingresar-reco1 {
     width: 274px;
     height: 48px;
@@ -478,44 +473,19 @@
     //.a-zona
 }
 .btn-menu-select {
-    width: 178px;
-    height: 45px;
-    border-radius: 7px;
     background-color: $selecred;
     border: 1px solid $selecred;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    transition: all 0.3s;
     //.a-menu
 }
-.btn-menu-all {
-    width: 178px;
-    height: 45px;
-    border-radius: 7px;
+.btn-menu-all {   
     border: solid 1px $selecred;
     background-color: $white;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
     //.a-text-menu-select
 }
 
 .btn-menu-inac {
-    width: 178px;
-    height: 45px;
-    border-radius: 7px;
     background-color: $silver;
     border: 1px solid $silver;
-    outline: none !important;
-    outline-width: 0 !important;
-    box-shadow: none;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
     pointer-events: none;
     //.a-text-menu-select
 }
