--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -688,7 +688,7 @@
   background-color: $darkred;
 }
 .title-table {
-  background-color: $dark2;
+  background-color: $greyish-brown-two;
 }
 
 .invalid-email {
