--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -23,12 +23,22 @@
   color: $coolBlue;
   font-family: $MontserratBold;
 }
-
+.a-text-bold-orange {
+  font-family: $MontserratBold;
+  color: $orange;
+}
 .a-text-bold-white {
   font-family: $MontserratBold;
   color: $white;
 }
-
+.a-text-bold-black {
+  font-family: $MontserratBold;
+  color: $black;
+}
+.a-text-bold-brown-two {
+  font-family: $MontserratBold;
+  color: $greyish-brown-two;
+}
 .a-text-bold-brownish {
   color: $repassgray;
   font-family: $MontserratBold;
