--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -4,7 +4,7 @@
 
 /* BOTONES REUTILIZABLES */
 .a-btn-basic-medium {
-    width: 227px;
+    width: 190px;
     height: 54px;
     border-radius: 20px;
     outline: none !important;
@@ -695,7 +695,7 @@
 .si-estilo {
     width: 52px;
     height: 43px;
-    border-right: $skyblue;
+    border-right: $teal;
     background-color: $white;
     font-family: $MontserratSemiBold;
     font-size: 16px;
@@ -711,7 +711,7 @@
     height: 43px;
     color: $dark1;
     line-height: 2.5;
-    border-left: $skyblue;
+    border-left: $teal;
     background-color: $white;
     font-family: $MontserratSemiBold;
     font-size: 16px;
