--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -1,3 +1,10 @@
+.add-images-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .loader {
     position: absolute;
     top: 50%;
