--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -19,6 +19,11 @@
 
     //a-text-public
 }
+.conten-tab{
+    overflow-x: scroll;
+    width: 500%;
+    height: 150px;
+}
 .contenedor-table {
     display: table;
     overflow-x: scroll;
@@ -31,7 +36,7 @@
 .contenedor {
     display: table;
     overflow-x: scroll;
-    width: 500%;
+    width: 112%;
     height: 63px;
     white-space: nowrap;
     //a-textpublic
