pantalla de subir imagenes

--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -248,3 +248,15 @@
     cursor: pointer;
     opacity: 0.7;
 }
+.imagethumb{
+    width: 513px;
+    height: 296px;
+}
+.imagevertical{
+    width: 623px;
+    height: 716px;
+}
+.imagesinop{
+    width: 431px;
+    height: 249px;
+}
