--- a/resources/sass/atoms/_separator.scss
+++ b/resources/sass/atoms/_separator.scss
@@ -25,4 +25,11 @@
    border-bottom: 3px solid $beige;
    margin-bottom: 10px;
  }
+ .separationhr{
+  background:$lightpink;
+  border: 2px solid $lightpink;
+ }
+ .bor{
+  border: solid 2px $morelightgray;
+ }
  
