--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -29,6 +29,18 @@
   font-family: $MontserratBold;
   color: $light;
 }
+.a-text-bold-two{
+  font-family: $MontserratBold;
+  color: $black-two;
+}
+.a-text-bold-warm{
+  font-family: $MontserratBold;
+  color:$warmGrey ;
+}
+.a-text-bold-tomato{
+  font-family: $MontserratBold;
+  color: $selecred;
+}
 .a-text-bold-cool {
   color: $coolBlue;
   font-family: $MontserratBold;
@@ -77,6 +89,10 @@
 .a-text-medium-black {
   font-family: $MontserratRegular;
   color: $black;
+}
+.a-text-black-brown-two{
+  font-family: $MontserratBlack;
+  color: $greyish-brown-two;
 }
 
 .a-text-medium-orange {
