--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -36,6 +36,10 @@
     -webkit-box-shadow: none;
     transition: all 0.3s;
 }
+.a-btn-white{
+ background: $beige;
+ border: 1px solid $beige;
+}
 
 .a-button-pill-teal-outline {
     border: 2px solid $teal;
