estilos de tabla

--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -21,6 +21,8 @@
 }
 .conten-tab {
     width: 500%;
+    display: table;
+    border-collapse: collapse;
 }
 .contenedor-table {
     display: table;
